--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,2 +1,2 @@
 set noparent
-filter=-build/namespaces,-legal/copyright,-readability/todo,-runtime/references
+filter=-whitespace,-runtime/int,-build/include_order,-runtime/explicit,-build/include_what_you_use,-build/namespaces,-legal/copyright,-readability/todo,-runtime/references
