--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "node-pre-gyp"
   ],
   "scripts": {
-    "install": "node-pre-gyp install --build-from-srouce",
+    "install": "node-pre-gyp install --fallback-to-build",
     "test": "grunt test"
   },
   "devDependencies": {
