--- a/package.json
+++ b/package.json
@@ -63,8 +63,9 @@
     "process": "^0.11.10"
   },
   "scripts": {
-    "install": "node-pre-gyp install --fallback-to-build",
-    "test": "grunt test"
+    "configure": "cd /vagrant;node node_modules/node-pre-gyp/bin/node-pre-gyp configure --debug",
+    "install": "cd vagrant;node node_modules/node-pre-gyp/bin/node-pre-gyp build --debug",
+    "test": "cd /vagrant;grunt test"
   },
   "devDependencies": {
     "async": "^2.6.0",
