--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "process": "^0.11.10"
   },
   "scripts": {
-    "install": "node-pre-gyp configure rebuild install --fallback-to-build",
+    "install": "node-pre-gyp configure build install --fallback-to-build",
     "test": "grunt test"
   },
   "devDependencies": {
